clean up plus added error handling, recyclerview plus splash screen

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
+
         android:name=".WeatherForecastApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,7 +24,8 @@
             android:value="AIzaSyD73OyIRiEkzYBl_h4H0Lm6m0uS_RkwlfM"/>
 
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.SplashActivity"
+            android:label="Splash Screen"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,6 +33,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MainActivity"
+            android:label="Home Screen"
+            android:exported="true"/>
     </application>
 
 </manifest>
