--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,9 +74,11 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.5.0'
 
     //Image lib
-    implementation 'com.makeramen:roundedimageview:2.2.1'
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
+    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
 
     // Hilt
     implementation("com.google.dagger:hilt-android:2.46.1")
